added actual content

--- a/wikipage.twig
+++ b/wikipage.twig
@@ -13,9 +13,10 @@
 <head>
 
 <body>
-    <article class="content">
-        {{ content }}
-    </article>
+    <h1 class="header header--1">
+        <a href="index.html" class="link">Home</a>
+    </h1>
+    <article class="content">{{ content }}</article>
 </body>
 
 </html>
