--- a/wikipage.twig
+++ b/wikipage.twig
@@ -13,9 +13,9 @@
 <head>
 
 <body>
-    <h1 class="header header--1">
-        <a href="index.html" class="link">Home</a>
-    </h1>
+    <h1 class="header header--1">{{ title }}</h1>
+    <a href="index.html" class="link">Home</a>
+    
     <article class="content">{{ content }}</article>
 </body>
 
