--- a/index.twig
+++ b/index.twig
@@ -12,7 +12,14 @@
 <head>
 
 <body>
-    <h1 class="header header--1">My wiki</h1>
+    <h1 class="header header--1 m-0">My wiki</h1>
+
+    <section id="search" class="display-none">
+        <h2 class="header header--2">Search</h2>
+        <input id="search__input" class="input" placeholder="article name">
+        <div id="search__results"></div>
+    </section>
+
     <section>
         <h2 class="header header--2">Index</h2>
         <div>
@@ -27,21 +34,21 @@
             </section>
         </div>
     </section>
-    
-    <section id="search">
-        <h2 class="header header--2">Search</h2>
-        <input id="search__input" class="input" placeholder="article name">
-        <div id="search__results"></div>
-    </section>
 
     <script>
+        const search = document.getElementById("search");
+        search.classList.remove("display-none");
+        
+        const searchInput = document.getElementById("search__input");
+        searchInput.focus();
+
         const ARTICLES = [
             {% for page in listOfPages %}"{{ page }}",
             {% endfor %}
         ];
 
         const searchResults = document.getElementById("search__results");
-        document.getElementById("search__input").addEventListener("input", function (event) {
+        searchInput.addEventListener("input", function (event) {
             searchResults.innerHTML = "";
 
             const searchTerm = event.target.value.toLowerCase();
@@ -75,7 +82,7 @@
 
 
                 const searchResult = document.createElement("a");
-                searchResult.classList.add("link", "link--block");
+                searchResult.classList.add("link", "display-block");
                 searchResult.href = slugifiedArticle + ".html";
                 searchResult.innerText = article;
 
