--- a/wikipage.twig
+++ b/wikipage.twig
@@ -16,7 +16,11 @@
     <h1 class="header header--1">{{ title }}</h1>
     <a href="index.html" class="link">Home</a>
     
-    <article class="content">{{ content }}</article>
+    <article class="content">
+        {{ content }}
+    </article>
+    
+    <a href="#" class="link link--toTop">top</div>
 </body>
 
 </html>
